fix: add render support to swagger
